--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
     width: 100%;
-    background-color: #a1bdf5;
+    background-color: #282c34;
     min-height: 40vh;
     display: flex;
     flex-direction: column;
